--- a/app/src/main/res/layout/activity_s_register_ui.xml
+++ b/app/src/main/res/layout/activity_s_register_ui.xml
@@ -12,11 +12,11 @@
 
     android:inputType="textPassword"/>
     <Button
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="70dp"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:text="@string/s_speed_register"
-        android:background="@drawable/s_login_btnshape"
+        style="@style/button_style"
         android:layout_gravity="center"
         android:id="@+id/s_phone_register"
         />
@@ -26,7 +26,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:text="@string/s_ordinary_register"
-        android:background="@drawable/s_login_btnshape"
+        style="@style/button_style"
         android:layout_gravity="center"
         android:id="@+id/s_common_register"
         />
