--- a/app/src/main/res/layout/layout1.xml
+++ b/app/src/main/res/layout/layout1.xml
@@ -19,12 +19,18 @@
             android:id="@+id/Home">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp">
+        android:layout_height="193dp">
             <ViewFlipper
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/s_home_vie"
                 >
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/s_home_imgcycle1"
+                    android:layout_gravity="center_vertical" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -36,15 +42,19 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/s_home_imgcycle3"
                     android:layout_gravity="center_vertical" />
-
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/s_home_imgcycle1"
+                    android:src="@drawable/s_home_imgcycle4"
                     android:layout_gravity="center_vertical" />
 
             </ViewFlipper>
+
     </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1.4dp"
+                android:background="@drawable/s_login_lineblack"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -55,11 +65,19 @@
                     android:text="健康资讯"
                     android:textSize="25dp"
                     android:id="@+id/s_home_healthy" />
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1.4dp"
+                    android:background="@drawable/s_login_lineblack"/>
                 <ListView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/s_home_thyList">
                 </ListView>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1.4dp"
+                    android:background="@drawable/s_login_lineblack"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
