--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,5 +89,12 @@
     </style>
     <!--*****************************************End-->
 
+    <!--BUTTON-->
+        <style name="button_style">
+            <item name="android:background">@drawable/s_login_btnshape</item>
+            <item name="android:textColor">@color/white</item>
+            <item name="android:textSize">20dp</item>
+
+        </style>
 
 </resources>
